--- a/Churnprediction-tryout.ipynb
+++ b/Churnprediction-tryout.ipynb
@@ -15,6 +15,8 @@
     "from sklearn.model_selection import train_test_split\n",
     "import seaborn as sns\n",
     "from sklearn.feature_selection import RFE\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
     "%matplotlib inline\n",
     "\n"
    ]
