--- a/Churnprediction-tryout.ipynb
+++ b/Churnprediction-tryout.ipynb
@@ -415,6 +415,47 @@
     "\n",
     "df_pre.dtypes\n",
     "\n"
+    "\n",
+    
+     
+    "#TRYOUT TO FILL IN THE MISSING VALUES WITH THE MEAN\n",
+"\n",
+"df_pre.isnull().sum()\n",
+"\n",
+"#numerical values\n",
+"\n",
+"    #first numerical\n",
+"df_pre['AVG_DATA_3MONTH'].mean()\n",
+"df_pre['AVG_DATA_3MONTH'].tail()\n",
+"df_pre['AVG_DATA_3MONTH'].replace(np.NaN, df_pre['AVG_DATA_3MONTH'].mean()).tail()\n",
+"\n",
+"    #Second numerical\n",
+"\n",
+"df_pre['COUNT_CONNECTIONS_3MONTH'].mean()\n",
+"df_pre['COUNT_CONNECTIONS_3MONTH'].tail()\n",
+"df_pre['COUNT_CONNECTIONS_3MONTH'].replace(np.NaN, df_pre['COUNT_CONNECTIONS_3MONTH'].mean()).tail()\n",
+"\n",
+"   #third numerical\n",
+"\n",
+"df_pre['COUNT_CONNECTIONS_3MONTH'].mean()\n",
+"df_pre['COUNT_CONNECTIONS_3MONTH'].tail()\n",
+"df_pre['COUNT_CONNECTIONS_3MONTH'].replace(np.NaN, df_pre['COUNT_CONNECTIONS_3MONTH'].mean()).tail()\n",
+"\n",
+"\n"
+"#categorical values\n",
+"\n",
+"\n",
+"from sklearn.preprocessing import LabelEncoder, OneHotEncoder
+"\n",
+"label_encoder= LabelEncoder()
+"\n",
+"X= label_encoder.fit_transform(df_pre['FIN_STATE'])
+"\n",
+"print(X)
+"\n",
+"print(df_pre)
+"\n",
+
    ]
   },
   {
