--- a/Churnprediction-tryout.ipynb
+++ b/Churnprediction-tryout.ipynb
@@ -3831,35 +3831,142 @@
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.30, random_state=1)\n",
     "\n",
     "\n",
-    "logmodel=LogisticRegression()\n",
-    "rfe= RFE(logmodel,20)\n",
-    "\n",
-    "rfe = rfe.fit(X_train, y_train.values.ravel())\n",
-    "\n",
-    "print(rfe.support_)\n",
-    "print(rfe.ranking_)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1030,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/pieterdujardin/anaconda3/envs/tryout1/lib/python3.7/site-packages/sklearn/linear_model/logistic.py:433: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
-      "  FutureWarning)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
-       "          intercept_scaling=1, max_iter=100, multi_class='warn',\n",
-       "          n_jobs=None, penalty='l2', random_state=None, solver='warn',\n",
-       "          tol=0.0001, verbose=0, warm_start=False)"
+    "import statsmodels.api as sm\n",
+				"\n",
+    "#Random model to try / compare\n",
+    "m1 = sm.Logit(y_train, sm.add_constant(X_train[['COUNT_ONNET_CALLS_1WEEK'] + ['AVG_DATA_3MONTH']].astype(float))).fit()\n",
+    "m1.summary2()\n",
+"\n",
+    "#Random 2e model: je ziet dat de AIC en BIC daalt door toevoegen van variabelen\n"
+				"m2= sm.Logit(y_train, sm.add_constant(X_train[['DAYS_TO_FEATURE EXTRACTION DATE'] + ['COUNT_PAYMENT_DELAYS_CURRENT']+ ['COUNT_PAYMENT_DELAYS_1YEAR']+ ['COMPLAINT_1WEEK']+ ['COMPLAINT_2WEEKS']+ ['COUNT_SMS_OUT_ONNET_1MONTH']].astype(float))).fit()\n"
+				"m2.summary2()\n"
+"\n",
+				"#To check if there are object types (die we dan weglaten of converten)\n"
+				"X_train.dtypes\n"
+"\n",
+				"#Hier worden ze gedropt, je kan ze ook gewoon weglaten uit je kolommen of converteren\n"
+				"X_train= X_train.drop('AVG_DATA_3MONTH', axis=1)\n"
+				"X_train= X_train.drop('COUNT_CONNECTIONS_3MONTH', axis=1)\n"
+				"X_train= X_train.drop('COUNT_SMS_INC_ONNET_6MONTH', axis=1)\n"
+				"X_train= X_train.drop('AVG_DATA_1MONTH', axis=1)\n"
+				"X_test=  X_test.drop('AVG_DATA_3MONTH', axis=1)\n"
+				"X_test=  X_test.drop('COUNT_CONNECTIONS_3MONTH', axis=1)\n"
+				"X_test=  X_test.drop('COUNT_SMS_INC_ONNET_6MONTH', axis=1)\n"
+				"X_test=  X_test.drop('AVG_DATA_1MONTH', axis=1)\n"
+"\n",
+				"#controle als ze allemaal weg zijn\n"
+				"X_test.dtypes\n"
+"\n",
+				"#Kijken als de dimensies kloppen\n"
+				"len(X_train.columns)\n"
+				"len(X_test.columns)\n"
+"\n",
+				#Opstellen logitmodel 3\n"
+				"train_cols = X_train.columns[1:]\n"
+				"logit = sm.Logit(y_train, X_train[train_cols] )\n"
+"\n",
+				"result = logit.fit()\n"
+"\n",
+				"#Je ziet hier dat de AIC en BIC beter zijn dan de vorige 2 modellen ,dus we gaan verder met deze\n"
+				"print(result.summary2())\n"
+"\n",
+				"print(result.summary())\n"
+				"#variables where the p-variable is smaller than 0,05 must be obtained, the other ones must be deleted.\n"
+"\n",
+				"#Enkel de kolommen geselecteer die voldoen aan bovenstaande vereiste\n"
+				"cols=['DAYS_TO_FEATURE EXTRACTION DATE', 'PREPAID','COUNT_PAYMENT_DELAYS_CURRENT','COUNT_PAYMENT_DELAYS_1YEAR','DAYS_PAYMENT_DELAYS_1YEAR','COMPLAINT_6MONTHS','CLV','COUNT_OFFNET_CALLS_1WEEK','COUNT_ONNET_CALLS_1WEEK','COUNT_SMS_INC_ONNET_1MONTH','COUNT_SMS_INC_ONNET_WKD_1MONTH','COUNT_SMS_OUT_ONNET_WKD_1MONTH','AVG_MINUTES_INC_OFFNET_1MONTH','AVG_MINUTES_INC_ONNET_1MONTH','MINUTES_INC_OFFNET_WKD_1MONTH','AVG_MINUTES_OUT_OFFNET_1MONTH','AVG_MINUTES_OUT_ONNET_1MONTH','MINUTES_OUT_OFFNET_WKD_1MONTH','MINUTES_OUT_ONNET_WKD_1MONTH']\n"
+"\n",
+				"#nieuw model 4\n"
+				"logit2 = sm.Logit(y_train, X_train[cols] )\n"
+				"result2 = logit2.fit()\n"
+"\n",
+				"print(result2.summary2())\n"
+				"#AIC en BIC dezelfde\n"
+"\n",
+				"print(result2.summary())\n"
+				"#klopt\n"
+"\n",
+				"#Confidence intervals to check the robustness\n"
+				"print(result2.conf_int())\n"
+"\n",
+				"#Interpretation : the confidence intervals that do not include a 0, you can reject?\n"
+"\n",
+				"#the odds ratio (interpretation : vb. we can expect the odds of churning to decrease by about (1-0.349365)*100% if they have a current delay in payment\n"
+				"print(np.exp(result2.params))\n"
+"\n",
+"\n",
+				"#nu je weet welke variabelen je best neemt, kun je beginnen met je logistic model op te stellen\n"
+				"from sklearn.linear_model import LogisticRegression\n"
+				"from sklearn import metrics\n"
+"\n",
+				"X_train[cols], X_test[cols], y_train, y_test = train_test_split(X[cols], y, test_size=0.3, random_state=0)\n"
+"\n",
+				"logreg = LogisticRegression()\n"
+				"X_train[cols].dtypes\n"
+				"logreg.fit(X_train[cols], y_train)\n"
+				"y_pred = logreg.predict(X_test[cols])\n"
+"\n",
+				"print('Accuracy of logistic regression classifier on test set: {:.2f}'.format(logreg.score(X_test[cols], y_test)))\n"
+"\n",
+				"#confusion matrix\n"
+				"from sklearn.metrics import confusion_matrix\n"
+				"confusion_matrix = confusion_matrix(y_test, y_pred)\n"
+				"print(confusion_matrix)\n"
+				"#The result is telling us that we have 995+193 correct predictions and 59+253 incorrect predictions.\n"
+"\n",
+"\n",
+				"#classification report\n"
+				"from sklearn.metrics import classification_report\n"
+				"print(classification_report(y_test, y_pred))\n"
+"\n",
+"\n",
+				"#ROC-curve\n"
+				"from sklearn.metrics import roc_auc_score\n"
+				"from sklearn.metrics import roc_curve\n"
+"\n",
+				"logit_roc_auc = roc_auc_score(y_test, logreg.predict(X_test[cols]))\n"
+				"fpr, tpr, thresholds = roc_curve(y_test, logreg.predict_proba(X_test[cls])[:,1])\n"
+				"plt.figure()\n"
+				"plt.plot(fpr, tpr, label='Logistic Regression (area = %0.2f)' % logit_roc_auc)\n"
+				"plt.plot([0, 1], [0, 1],'r--')\n"
+				"plt.xlim([0.0, 1.0])\n"
+				"plt.ylim([0.0, 1.05])\n"
+				"plt.xlabel('False Positive Rate')\n"
+				"plt.ylabel('True Positive Rate')\n"
+				"plt.title('Receiver operating characteristic')\n"
+				"plt.legend(loc="lower right")\n"
+				"plt.savefig('Log_ROC')\n"
+"\n",
+				"plt.show()\n"
+								"logmodel=LogisticRegression()\n",
+								"rfe= RFE(logmodel,20)\n",
+								"\n",
+								"rfe = rfe.fit(X_train, y_train.values.ravel())\n",
+								"\n",
+								"print(rfe.support_)\n",
+								"print(rfe.ranking_)\n"
+							]
+						},
+						{
+							"cell_type": "code",
+							"execution_count": 1030,
+							"metadata": {},
+							"outputs": [
+								{
+									"name": "stderr",
+									"output_type": "stream",
+									"text": [
+										"/Users/pieterdujardin/anaconda3/envs/tryout1/lib/python3.7/site-packages/sklearn/linear_model/logistic.py:433: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
+										"  FutureWarning)\n"
+									]
+								},
+								{
+									"data": {
+										"text/plain": [
+											"LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
+											"          intercept_scaling=1, max_iter=100, multi_class='warn',\n",
+											"          n_jobs=None, penalty='l2', random_state=None, solver='warn',\n",
+											"          tol=0.0001, verbose=0, warm_start=False)"
       ]
      },
      "execution_count": 1030,
