--- a/Churnprediction-tryout.ipynb
+++ b/Churnprediction-tryout.ipynb
@@ -3868,8 +3868,75 @@
     }
    ],
    "source": [
-    "logmodel= LogisticRegression()\n",
-    "logmodel.fit(X_train,y_train)"
+    "X_train.isnull().values.any()""\n"
+    "y_train""\n"
+    "import statsmodels.api as sm""\n"
+    "X_train.dtypes""\n"
+    "X_train.isnull().values.any()""\n"
+    "m1 = sm.Logit(y_train, sm.add_constant(X_train[['COUNT_ONNET_CALLS_1WEEK'] + ['AVG_DATA_3MONTH']].astype(float))).fit()""\n"
+    "m1.summary2()""\n"
+    "m2= sm.Logit(y_train, sm.add_constant(X_train[['DAYS_TO_FEATURE EXTRACTION DATE'] + ['COUNT_PAYMENT_DELAYS_CURRENT']+ ['COUNT_PAYMENT_DELAYS_1YEAR']+ ['COMPLAINT_1WEEK']+ ['COMPLAINT_2WEEKS']+ ['COUNT_SMS_OUT_ONNET_1MONTH']].astype(float))).fit()""\n"
+    "m2.summary2()""\n"
+    "X_test.dtypes""\n"
+    "len(X_train.columns)""\n"
+    "len(X_test.columns)""\n"
+    "#Check if fitting matrix""\n"
+    "m3= sm.Logit(y_train, sm.add_constant(X_train[['DAYS_TO_FEATURE EXTRACTION DATE'] + ['COUNT_PAYMENT_DELAYS_CURRENT']+ ['COUNT_PAYMENT_DELAYS_1YEAR']+ ['COMPLAINT_1WEEK']+ ['COMPLAINT_2WEEKS']+ ['COUNT_SMS_OUT_ONNET_1MONTH']+ ['PREPAID']+ ['DAYS_PAYMENT_DELAYS_CURRENT']+ ['DAYS_PAYMENT_DELAYS_1YEAR']+ ['COMPLAINT_1MONTH']+ ['COMPLAINT_3MONTHS']+ ['COMPLAINT_6MONTHS']+ ['CLV']+ ['COUNT_PAYMENT_DELAYS_CURRENT']+ ['COUNT_OFFNET_CALLS_1WEEK']+ ['COUNT_ONNET_CALLS_1WEEK'] + ['COUNT_SMS_OUT_OFFNET_6MONTH']+ ['COUNT_SMS_INC_OFFNET_1MONTH']+ ['COUNT_SMS_INC_OFFNET_WKD_1MONTH']+ ['COUNT_SMS_INC_ONNET_1MONTH']+ ['COUNT_SMS_INC_ONNET_WKD_1MONTH']+ ['COUNT_SMS_OUT_OFFNET_1MONTH']+ ['COUNT_SMS_OUT_OFFNET_WKD_1MONTH']+ ['COUNT_SMS_OUT_ONNET_WKD_1MONTH']+ ['AVG_MINUTES_INC_OFFNET_1MONTH']+ ['AVG_MINUTES_INC_ONNET_1MONTH']+ ['MINUTES_INC_OFFNET_WKD_1MONTH']+ ['MINUTES_INC_ONNET_WKD_1MONTH']+ ['AVG_MINUTES_OUT_OFFNET_1MONTH']+ ['AVG_MINUTES_OUT_ONNET_1MONTH']+ ['MINUTES_OUT_OFFNET_WKD_1MONTH']+ ['MINUTES_OUT_ONNET_WKD_1MONTH']].astype(float))).fit(method='bfgs')"
+    "\n"
+    "y_test""\n"
+    "train_cols = X_train.columns[1:]""\n"
+    "logit = sm.Logit(y_train, X_train[train_cols].astype(float) )""\n"
+    "result = logit.fit()""\n"
+    "#Na omzetten van de NaN ... bekwam ik toch een model, en hieruit heb ik logit2 bepaald.""\n"
+    "print(result.summary2())""\n"
+    "#variables where the p-variable is smaller than 0,05 must be obtained, the other ones must be deleted.""\n"
+    "cols=['DAYS_TO_FEATURE EXTRACTION DATE', 'PREPAID','COUNT_PAYMENT_DELAYS_CURRENT','COUNT_PAYMENT_DELAYS_1YEAR','DAYS_PAYMENT_DELAYS_1YEAR','COMPLAINT_6MONTHS','CLV','COUNT_OFFNET_CALLS_1WEEK','COUNT_ONNET_CALLS_1WEEK','COUNT_SMS_INC_ONNET_1MONTH','COUNT_SMS_INC_ONNET_WKD_1MONTH','COUNT_SMS_OUT_ONNET_WKD_1MONTH','AVG_MINUTES_INC_OFFNET_1MONTH','AVG_MINUTES_INC_ONNET_1MONTH','MINUTES_INC_OFFNET_WKD_1MONTH','AVG_MINUTES_OUT_OFFNET_1MONTH','AVG_MINUTES_OUT_ONNET_1MONTH','MINUTES_OUT_OFFNET_WKD_1MONTH','MINUTES_OUT_ONNET_WKD_1MONTH']"
+    "\n"
+    "X_train[cols].isnull().any()""\n"
+    "logit2 = sm.Logit(y_train, X_train[cols].astype(float) )""\n"
+    "result2 = logit2.fit()""\n"
+    "print(result2.summary2())""\n"
+    "#Confidence intervals to check the robustness""\n"
+    "print(result2.conf_int())""\n"
+    "#Interpretation : the confidence intervals that do not include a 0, you can reject?""\n"
+    "\n"
+    "#the odds ratio (interpretation : vb. we can expect the odds of churning to decrease by about (1-0.349365)*100% if they have a current delay in payment"
+    "X_train.isnull().values.any()""\n"
+    "print(np.exp(result2.params))""\n"
+    "from sklearn.linear_model import LogisticRegression""\n"
+    "from sklearn import metrics""\n"
+    "X_train.isnull().values.any()""\n"
+    "logreg = LogisticRegression()""\n"
+    "X_train[cols].dtypes""\n"
+    "X_train.isnull().values.any()""\n"
+    "X_train[cols].isnull().sum()""\n"
+    "logreg.fit(X_train[cols], y_train)""\n"
+    "X_train[cols].isnull().values.any()""\n"
+    "y_pred = logreg.predict(X_test[cols])""\n"
+    "\n"
+    "print('Accuracy of logistic regression classifier on test set: {:.2f}'.format(logreg.score(X_test[cols], y_test)))"
+    "from sklearn.metrics import confusion_matrix""\n"
+    "confusion_matrix = confusion_matrix(y_test, y_pred)""\n"
+    "print(confusion_matrix)""\n"
+    "#The result is telling us that we have 995+193 correct predictions and 59+253 incorrect predictions.""\n"
+    "from sklearn.metrics import classification_report""\n"
+    "print(classification_report(y_test, y_pred))""\n"
+    "from sklearn.metrics import roc_auc_score""\n"
+    "from sklearn.metrics import roc_curve""\n"
+    "logit_roc_auc = roc_auc_score(y_test, logreg.predict(X_test[cols]))""\n"
+    "fpr, tpr, thresholds = roc_curve(y_test, logreg.predict_proba(X_test[cols])[:,1])""\n"
+    "plt.figure()""\n"
+    "plt.plot(fpr, tpr, label='Logistic Regression (area = %0.2f)' % logit_roc_auc)""\n"
+    "plt.plot([0, 1], [0, 1],'r--')""\n"
+    "plt.xlim([0.0, 1.0])""\n"
+    "plt.ylim([0.0, 1.05])""\n"
+    "plt.xlabel('False Positive Rate')""\n"
+    "plt.ylabel('True Positive Rate')""\n"
+    "plt.title('Receiver operating characteristic')""\n"
+    "plt.legend(loc="lower right")""\n"
+    "plt.savefig('Log_ROC')""\n"
+    "plt.show()""\n"
+    "\n"
    ]
   },
   {
